--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite App</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <img id="imgMarkerHiro" src="https://raw.githubusercontent.com/stemkoski/AR.js-examples/master/markers/hiro.png"
+    alt="hiro" style="display: none" />
+  <img id="imgNFTEarth" src="https://raw.githubusercontent.com/stemkoski/AR.js-examples/master/images/earth-flat.jpg"
+    alt="earth" style="display: none" />
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
