Add commit to deploy only

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div id="app"></div>
+  <!-- Image Marker -->
   <img id="imgMarkerHiro" src="https://raw.githubusercontent.com/stemkoski/AR.js-examples/master/markers/hiro.png"
     alt="hiro" style="display: none" />
   <img id="imgNFTEarth" src="https://raw.githubusercontent.com/stemkoski/AR.js-examples/master/images/earth-flat.jpg"
